--- a/views/frame.jade
+++ b/views/frame.jade
@@ -3,5 +3,5 @@ html
   if title
     head
       title= title
-  body(style='margin:0;padding:0')
+  body(style='margin:0;padding:0;height:100%')
     iframe(src=url, width='100%', height='100%',style='border:0')
