Adds the cli utils and moves the admin/ part.

--- a/views/largetype.jade
+++ b/views/largetype.jade
@@ -4,5 +4,5 @@ html
     head
       title= title
   body(style='margin:0;padding:0')
-    .container(style='text-align:center;padding-top:200px')
+    .container(style='position:absolute;top:30%;width:100%;text-align:center')
       h1(style='font-family:Arial, sans-serif;font-weight:bold;font-size:42pt')= url
