Simple control panel interface to add stuff.

--- a/views/largetype.jade
+++ b/views/largetype.jade
@@ -1,7 +1,8 @@
 doctype html
 html
-  if title
-    head
+  head
+    meta(charset='UTF-8')
+    if title
       title= title
   body(style='margin:0;padding:0')
     .container(style='position:absolute;top:30%;width:100%;text-align:center')
