--- a/views/frame.jade
+++ b/views/frame.jade
@@ -1,7 +1,8 @@
 doctype html
 html
-  if title
-    head
+  head
+    meta(charset='UTF-8')
+    if title
       title= title
   body(style='margin:0;padding:0;height:100%')
     iframe(src=url, width='100%', height='100%',style='border:0')
