--- a/views/controlpanel.jade
+++ b/views/controlpanel.jade
@@ -10,48 +10,55 @@ html
 
       h1 #{req.hostname} - misdirection
 
-      hr
+      .errorlist
+        if err
+          .error= err
 
-      if err
-        .error= err
-        hr
+      input#search.search(type='text', name='query', placeholder='search: /some-path')
 
-      form(method='post')
+      .panes
+        .pane.pane-left
+          form(method='post')
+            .create
+              .control
+                label Name
+                input(type='text', name='name', placeholder='/some-path', value=req.body.name)
+              .control
+                label URL
+                input(type='text', name='url', placeholder='http://example.org/some/target', value=req.body.url)
+              .control
+                label type
+                select(name='type')
+                  option(value='redirect', selected=value=req.body.type=='redirect'?true:undefined) Redirect
+                  option(value='largetype', selected=value=req.body.type=='largetype'?true:undefined) Large Type
+                  option(value='rproxy', selected=value=req.body.type=='rproxy'?true:undefined) Reverse Proxy
 
-        //-input#search.search(type='text', name='key', placeholder='search: /some-path')
+              .extra.extra-redirect
+                .control
+                  label Permanent
+                  input(type='checkbox', name='permanent', checked=req.body.permanent)
+                  | 301 Moved Permanently
 
-        .create
-          .control
-            label Name
-            input(type='text', name='name', placeholder='/some-path', value=req.body.name)
-          .control
-            label URL
-            input(type='text', name='url', placeholder='http://example.org/some/target', value=req.body.url)
-          .control
-            label type
-            select(name='type')
-              option(value='redirect', selected=value=req.body.type=='redirect'?true:undefined) Redirect
-              option(value='largetype', selected=value=req.body.type=='largetype'?true:undefined) Large Type
-              option(value='rproxy', selected=value=req.body.type=='rproxy'?true:undefined) Reverse Proxy
+                .control
+                  label Hidden
+                  input(type='checkbox', name='hidden', checked=req.body.hidden)
+                  | hide redirect in a frame
+                  .help overrules the 'permanent' option.
 
-          .extra.extra-redirect
-            .control
-              label Permanent
-              input(type='checkbox', name='permanent', checked=req.body.permanent)
-              | 301 Moved Permanently
+              .extra.extra-largetype
+                .control
+                  label Font Size
+                  input(type='number', name='fontsize', value=req.body.fontsize||42)
 
-            .control
-              label Hidden
-              input(type='checkbox', name='hidden', checked=req.body.hidden)
-              | hide redirect in a frame
-              .help overrules the 'permanent' option.
+              .submit
+                input(type='submit')
+        .pane.pane-right
+          ul.directions
+            if directions
+              for d in directions
+                li= d.name
 
-          .extra.extra-largetype
-            .control
-              label Font Size
-              input(type='number', name='fontsize', value=req.body.fontsize||42)
 
-          .submit
-            input(type='submit')
+
 
     script(src='main.js')
