--- a/views/controlpanel.jade
+++ b/views/controlpanel.jade
@@ -32,6 +32,7 @@ html
                   option(value='redirect', selected=value=req.body.type=='redirect'?true:undefined) Redirect
                   option(value='largetype', selected=value=req.body.type=='largetype'?true:undefined) Large Type
                   option(value='rproxy', selected=value=req.body.type=='rproxy'?true:undefined) Reverse Proxy
+                  option(value='youtube', selected=value=req.body.type=='youtube'?true:undefined) YouTube
 
               .extra.extra-redirect
                 .control
@@ -58,7 +59,7 @@ html
           ul.directions
             if directions
               for d in directions
-                li= d.name
+                li.direction= d.name
 
 
 
